fix: endpoints to plural
